--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/bootstrap.css" type="text/css">
-    <script src="../JS/jquery-2.1.4.js"></script>
-    <script src="../JS/bootstrap.js"></script>
+    <link rel="stylesheet" href="../baiCK.github.io/CSS/bootstrap.css" type="text/css">
+    <script src="../baiCK.github.io/JS/jquery-2.1.4.js"></script>
+    <script src="../baiCK.github.io/JS/bootstrap.js"></script>
     <script>
         $(document).ready(function() {
             var i = 1;
@@ -68,7 +68,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col text-center">
-            <h2><img src="../img/LOGO.PNG" alt="">Bộ Công Thương
+            <h2><img src="../baiCK.github.io/img/LOGO.PNG" alt="">Bộ Công Thương
 
             </h2>
             <h3 class="text-danger">Trường Đại Học Công Nghiệp Thành Phố HCM</h3>
